--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>孫の手本舗</title>
+    <title>孫の手本舗 埼玉県北本市近郊の便利屋</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
@@ -113,46 +113,54 @@
                     <p class="service__intro__para">そんな時は、ぜひ<span class="service__intro__para__span">「孫の手本舗」</span>をご活用ください。<br class="brss">お客様の笑顔のために誠心誠意、お手伝いさせていただきます。<br class="brss">まずはぜひお客様のお困りごとをお気軽にご相談下さい。
                     </p>
                 </div>
-                <ul class="service__topics1 fadein">
-                    <li class="service__topics1__topic">
-                        <h3 class="service__topics1__topic__title"><img src="images/s-img01.png" alt=""></h3>
-                        <div class="service__topics1__topic__price">
-                            <div class="service__topics1__topic__price__bar">0,000円～</div>
-                        </div>
-                    </li>
-                    <li class="service__topics1__topic">
-                        <h3 class="service__topics1__topic__title"><img src="images/s-img02.png" alt=""></h3>
-                        <div class="service__topics1__topic__price">
-                            <div class="service__topics1__topic__price__bar">0,000円～</div>
-                        </div>
-                    </li>
-                    <li class="service__topics1__topic">
-                        <h3 class="service__topics1__topic__title"><img src="images/s-img03.png" alt=""></h3>
-                        <div class="service__topics1__topic__price">
-                            <div class="service__topics1__topic__price__bar">0,000円～</div>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="service__topics2 fadein">
-                    <li class="service__topics2__topic">
-                        <h3 class="service__topics2__topic__title"><img src="images/s-img04.png" alt=""></h3>
-                        <div class="service__topics2__topic__price">
-                            <div class="service__topics2__topic__price__bar">0,000円～</div>
-                        </div>
-                    </li>
-                    <li class="service__topics2__topic">
-                        <h3 class="service__topics2__topic__title"><img src="images/s-img05.png" alt=""></h3>
-                        <div class="service__topics2__topic__price">
-                            <div class="service__topics2__topic__price__bar">0,000円～</div>
-                        </div>
-                    </li>
-                    <li class="service__topics2__topic">
-                        <h3 class="service__topics2__topic__title"><img src="images/s-img06.png" alt=""></h3>
-                        <div class="service__topics2__topic__price">
-                            <div class="service__topics2__topic__price__bar">0,000円～</div>
-                        </div>
-                    </li>
-                </ul>
+                <div class="service_area fadein">
+                    <ul class="service__topics1 fadein">
+                        <li class="service__topics1__topic">
+                            <h3 class="service__topics1__topic_title">お掃除</h3>
+                            <p class="service__topics1__topic__img"><img src="images/ser-img01.jpg" alt=""></p>
+                            <div class="service__topics1__topic__price">
+                                <div class="service__topics1__topic__price__bar">0,000円～</div>
+                            </div>
+                        </li>
+                        <li class="service__topics1__topic">
+                            <h3 class="service__topics1__topic_title">お洗濯</h3>
+                            <p class="service__topics1__topic__img"><img src="images/ser-img02.jpg" alt=""></p>
+                            <div class="service__topics1__topic__price">
+                                <div class="service__topics1__topic__price__bar">0,000円～</div>
+                            </div>
+                        </li>
+                        <li class="service__topics1__topic">
+                            <h3 class="service__topics1__topic_title">お買い物</h3>
+                            <p class="service__topics1__topic__img"><img src="images/ser-img03.jpg" alt=""></p>
+                            <div class="service__topics1__topic__price">
+                                <div class="service__topics1__topic__price__bar">0,000円～</div>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="service__topics2 fadein">
+                        <li class="service__topics2__topic">
+                            <h3 class="service__topics2__topic_title">日曜大工・修理</h3>
+                            <p class="service__topics2__topic__img"><img src="images/ser-img04.jpg" alt=""></p>
+                            <div class="service__topics2__topic__price">
+                                <div class="service__topics2__topic__price__bar">0,000円～</div>
+                            </div>
+                        </li>
+                        <li class="service__topics2__topic">
+                            <h3 class="service__topics2__topic_title">ベビーシッター</h3>
+                            <p class="service__topics2__topic__img"><img src="images/ser-img05.jpg" alt=""></p>
+                            <div class="service__topics2__topic__price">
+                                <div class="service__topics2__topic__price__bar">0,000円～</div>
+                            </div>
+                        </li>
+                        <li class="service__topics2__topic">
+                            <h3 class="service__topics2__topic_title">パソコン・スマホの操作</h3>
+                            <p class="service__topics2__topic__img"><img src="images/ser-img06.jpg" alt=""></p>
+                            <div class="service__topics2__topic__price">
+                                <div class="service__topics2__topic__price__bar">0,000円～</div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
                 <div class="contact__area fadein">
                     <p class="contact__area__para">どんなことでもお手伝いさせていただきます！<br>まずはお気軽にご相談ください!</p>
                     <ul class="contact__area__topics">
@@ -294,31 +302,26 @@
                         <li class="faq__list__topics__topic fadein">
                             <p class="question">どこの地域でお願いできますか？</p>
                             <p class="answer">埼玉県北本市近郊で営業しています。地域によってはお伺いできる場合がございますので、まずはお気軽にお問い合わせください。尚、別途出張費を頂戴することもございます。</p>
-
                             <div class="faq__list__topics__topic__round">Q1.</div>
                         </li>
                         <li class="faq__list__topics__topic fadein">
                             <p class="question">予約は何日前までにすればいいですか？</p>
                             <p class="answer">即実対応も可能です。ただしご予約のお客様が優先となりますので、事前のご予約をお勧めいたします。</p>
-
                             <div class="faq__list__topics__topic__round">Q2.</div>
                         </li>
                         <li class="faq__list__topics__topic fadein">
                             <p class="question">サービス一覧にない作業もお願いしたいのですが、可能ですか？</p>
                             <p class="answer">どんなことでも承ります。まずはお見積りをさせていただきますので、お気軽にご相談くださいませ。</p>
-
                             <div class="faq__list__topics__topic__round">Q3.</div>
                         </li>
                         <li class="faq__list__topics__topic fadein">
                             <p class="question">支払いはどのようにすればいいですか？</p>
                             <p class="answer">作業終了後の現金払いとなっております。</p>
-
                             <div class="faq__list__topics__topic__round">Q4.</div>
                         </li>
                         <li class="faq__list__topics__topic fadein">
                             <p class="question">便利屋さんに依頼するのが初めてで少し不安なのですが・・・。</p>
                             <p class="answer">お客様のご希望をしっかり伺いつつ、スタッフが誠心誠意作業させていただきますのでご安心ください。</p>
-
                             <div class="faq__list__topics__topic__round">Q5.</div>
                         </li>
                     </ul>
