--- a/html/index.html
+++ b/html/index.html
@@ -137,6 +137,7 @@
                             </div>
                         </li>
                     </ul>
+                    <!-- サービスの項目を増やしたい場合は、以下のulを一つ増やしてtopics2をtopics3などに変更　CSSも変更　そのうえでタイトルや写真を変更 -->
                     <ul class="service__topics2 fadein">
                         <li class="service__topics2__topic">
                             <h3 class="service__topics2__topic_title">日曜大工・修理</h3>
